# vcs2git

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
doc/: architecture.md  decisions.md  known-issues.md  roadmap.md  solutions.md
src/: cli.rs  git_ops.rs  main.rs  progress.rs  state.rs  utils.rs  validation.rs  vcs.rs
tests/: cli_options_test.rs  integration_test.rs  rollback_test.rs
tests/autoware_test/: .gitignore  run_test.sh
