[package]
name = "vcs2git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
clap = { version = "4.5.1", features = ["derive"] }
git2 = "0.18.2"
indexmap = { version = "2.2.3", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
url = { version = "2.5.0", features = ["serde"] }
