[package]
name = "vcs2git"
version = "0.4.0"
description = "Import VCS .repos as Git submodules"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/vcs2git/"
homepage = "https://github.com/jerry73204/vcs2git/"
repository = "https://github.com/jerry73204/vcs2git.git"

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
clap = { version = "4.5.1", features = ["derive"] }
git2 = "0.18.2"
indexmap = { version = "2.2.3", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
url = { version = "2.5.0", features = ["serde"] }
indicatif = "0.17"

[dev-dependencies]
tempfile = "3.10"
